--- a/this redhat.yml
+++ b/this redhat.yml
@@ -6,13 +6,13 @@
     - name: this task is for redhat
       yum:
         name:httpd
-        state: latest
+        state: present
       ignore_errors: yes
       tags: demo_1
     - name: this task is for debian
       apt:
         name: apache2
-        state: latest
+        state: present
       ignore_errors: yes
       tags: demo2
 ...        
